swarm-demo-app/infra/linkerd/linkerd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: linkerd
    http:
      paths:
      - path: /
        backend:
          serviceName: linkerd-linkerd
          servicePort: 9990
